--- a/sub/eventship/event.html
+++ b/sub/eventship/event.html
@@ -83,7 +83,7 @@
                         마케팅 효율 측면에서 강력한 시너지 효과를 일으킵니다.</span>
                 </div>
                 <div class="sub_slide">
-                    <div class="sub_slide_wrap">
+                    <div class="sub_slide_wrap" style="overflow: hidden;">
                         <div class="swiper-container" style="width:183px">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide"><img src="../../images/sub/img_sub_championship_info_slide1.png" alt="" style="width:183px" /></div>
@@ -113,6 +113,17 @@
                         dl:nth-child(5),dl:nth-child(6){margin-top:90px;}
                         dd{line-height:35px;}
                         dd span{margin-top:5px !important}
+                        .practice_info_wrap.w50{}
+                        .practice_info_wrap.w50 dl{
+                            width: calc(50% - 30px) !important;
+                        }
+                        .practice_info_wrap.w50 dl:nth-child(3){
+                            clear: both;
+                            margin-top: 90px;
+                        }
+                        .practice_info_wrap.w50 dl:nth-child(4){
+                            clear: none;
+                        }
                     </style>
                     <ul>
                         <li data-id="tab1" class="on">풍선 (오브젝트)</li>
@@ -151,76 +162,18 @@
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>판매단가<br /><span>3,000만원 (1개CC, 1개월)<br />
+                                <dd>판매단가<br /><span>5,000만원 (1개CC, 1개월)<br />
                                     <span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>광고 예상 노출량<br /><span>1,200만회<br /><span style="font-size:15px">*이벤트 CC 1개 추가 시 노출량 2배</span></span></dd>
+                                <dd>광고 예상 노출량<br /><span>1,200만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>6</dt>
                                 <dd>기타<br /><span>미션 성공<br />
                                     경품은 광고주 제공</span></dd>
                             </dl>
-                        </div>
-                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
-                        <div class="event_list_table_wrap">
-                            <table>
-                                <colgroup>
-                                    <col width="14.2%" />
-                                    <col width="14.2%" />
-                                    <col width="14.2%" />
-                                    <col width="14.2%" />
-                                    <col width="14.2%" />
-                                    <col width="14.2%" />
-                                    <col width="14.2%" />
-                                </colgroup>
-                                <tr>
-                                    <th>스크린 광고(게임 전)</th>
-                                    <td><span>로비 타이틀</span></td>
-                                    <td><span>플레이어우측</span></td>
-                                    <td><span>이벤트 홍보</span></td>
-                                    <td colspan="3">전면 팝업 협의</td>
-                                </tr>
-                                <tr>
-                                    <th rowspan="3">스크린 광고(게임 중)</th>
-                                    <td>홀입장 동영상</td>
-                                    <td><span>티박스 바닥</span></td>
-                                    <td><span>A보드</span></td>
-                                    <td><span>홀 깃발</span></td>
-                                    <td>가상광고</td>
-                                    <td>나스모스킨</td>
-                                </tr>
-                                <tr>
-                                    <td>홀 이동 로딩창</td>
-                                    <td>스코어보드 상단</td>
-                                    <td>스코어보드 하단</td>
-                                    <td>메뉴 상단</td>
-                                    <td>홀 이동 동영상</td>
-                                </tr>
-                                <tr>
-                                    <td><span>이벤트 출력 팝업</span></td>
-                                    <td><span>이벤트 중간 성공 팝업</span></td>
-                                    <td><span>이벤트 중간 실패 팝업</span></td>
-                                    <td><span>이벤트 성공 팝업</span></td>
-                                    <td colspan="3"><span>이벤트 실패 팝업</span></td>
-                                </tr>
-                                <tr>
-                                    <th>골프존 닷컴 (웹)</th>
-                                    <td><span>메인 중앙</span></td>
-                                    <td><span>메인 우측</span></td>
-                                    <td>GNB</td>
-                                    <td colspan="3"><span>RON 우측</span></td>
-                                </tr>
-                                <tr>
-                                    <th>골프존 닷컴 (앱)</th>
-                                    <td><span>메인 중앙</span></td>
-                                    <td><span>이벤트 리스트</span></td>
-                                    <td><span>이벤트 페이지</span></td>
-                                    <td colspan="3"><span>전면 배너 협의</span></td>
-                                </tr>
-                            </table>
                         </div>
                     </div>
                 </div>
@@ -242,7 +195,7 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급</dd>
+                                <dd>미션 달성시 골프존앱 선물 상자를 <br>통하여 선물 지급</dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
@@ -255,7 +208,7 @@
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>판매단가 : 3,000만원 (1개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></dd>
+                                <dd>판매단가 : 5,000만원 (1개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></dd>
                             </dl>
                             <dl>
                                 <dt>6</dt>
@@ -356,7 +309,7 @@
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>판매단가 : 3,000만원 (1개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></dd>
+                                <dd>판매단가 : 6,000만원 (1개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></dd>
                             </dl>
                             <dl>
                                 <dt>6</dt>
@@ -364,7 +317,7 @@
                                     경품은 광고주 제공</span></dd>
                             </dl>
                         </div>
-                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -422,7 +375,7 @@
                                     <td colspan="3">전면 배너 협의</td>
                                 </tr>
                             </table>
-                        </div>
+                        </div> -->
                     </div>
                 </div><!--// tab3 -->
                 <div id="tab4" class="tab_content">
@@ -461,11 +414,10 @@
                             </dl>
                             <dl>
                                 <dt>6</dt>
-                                <dd>기타<br /><span>미션 성공<br />
-                                    경품은 광고주 제공</span></dd>
+                                <dd>기타<br /><span>2023년 판매완료</span></dd>
                             </dl>
                         </div>
-                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -522,7 +474,7 @@
                                     <td colspan="3">전면 배너 협의</td>
                                 </tr>
                             </table>
-                        </div>
+                        </div> -->
                     </div>
                 </div><!--// tab4 -->
                 <div id="tab5" class="tab_content">
@@ -557,7 +509,7 @@
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>판매단가 : 5,000만원 (15개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000 만원</span></dd>
+                                <dd>판매단가 : 6,000만원 (15개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000 만원</span></dd>
                             </dl>
                             <dl>
                                 <dt>6</dt>
@@ -565,7 +517,7 @@
                                     경품은 광고주 제공</span></dd>
                             </dl>
                         </div>
-                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -623,7 +575,7 @@
                                     <td colspan="3"><span>전면 배너 협의</span></td>
                                 </tr>
                             </table>
-                        </div>
+                        </div> -->
                     </div>
                 </div><!--// tab5 -->
                 <div id="tab6" class="tab_content">
@@ -634,10 +586,12 @@
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                             </iframe>
                         </div>
-                        <div class="practice_info_wrap">
+                        <div class="practice_info_wrap w50">
                             <dl>
                                 <dt>1</dt>
-                                <dd>전국 골프존 회원들의 경기데이터와 전국 3만여 시스템의 네트워크 서비스를 통하여 대결의 즐거움을 극대화한 대전 모드 
+                                <dd>전국 골프존 회원들의 경기데이터와 <br>
+                                    전국 3만여 시스템의 네트워크 서비스를 통하여 <br>
+                                    대결의 즐거움을 극대화한 대전 모드 
                                 </dd>
                             </dl>
                             <dl>
@@ -651,8 +605,12 @@
                                 </span>
                                 </dd>
                             </dl>
+                            <dl>
+                                <dt>4</dt>
+                                <dd>기타<br /><span>2023년 판매완료</span></dd>
+                            </dl>
                         </div>
-                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -709,7 +667,7 @@
                                     <td colspan="3"><span>전면 배너 협의</span></td>
                                 </tr>
                             </table>
-                        </div>
+                        </div> -->
                     </div>
                 </div><!--// tab5 -->
             </div>
