--- a/m/index.html
+++ b/m/index.html
@@ -101,9 +101,9 @@
             <div class="slide_wrap">
                 <div class="swiper-container_top">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide"><img src="images/main/img_main_top_visual1.png"></div>
-                      <div class="swiper-slide"><img src="images/main/img_main_top_visual2.png"></div>
-                      <div class="swiper-slide"><img src="images/main/img_main_top_visual3.png"></div>
+                      <div class="swiper-slide"><img src="images/main/img_main_top_visual11.jpg"></div>
+                      <div class="swiper-slide"><img src="images/main/img_main_top_visual12.jpg"></div>
+                      <div class="swiper-slide"><img src="images/main/img_main_top_visual13.jpg"></div>
                     </div>
                 </div>
                 <script>
