--- a/m/sub/eventship/event.html
+++ b/m/sub/eventship/event.html
@@ -118,7 +118,7 @@
             </div>
             <div class="sub_slide">
                 <div class="sub_slide_wrap">
-                    <div class="swiper-container">
+                    <div class="swiper-container" style="overflow: hidden">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide"><img src="../../images/sub/img_sub_championship_info_slide1.png" alt="" /></div>
                             <div class="swiper-slide"><img src="../../images/sub/img_sub_championship_info_slide2.png" alt="" /></div>
@@ -162,9 +162,16 @@
                 <div class="practice_info_wrap">
                     <dl>
                         <dt>1</dt>
-                        <dd>티샷 시 페어웨이에 등장하는<br />
-                            브랜딩 된 풍선(오브젝트) 6회 출현,<br />
-                            3번 맞히면 미션 성공 <br /><span style="font-size:12px">*이벤트 발동/ 맞히는 횟수 설정 가능</span></dd>
+                        <dd>
+                            티샷 시 페어웨이에 등장하는<br />
+                            브랜딩 된 풍선(오브젝트) N회 출현,<br />
+                            N번 맞히면 미션 성공 <br />
+                            <span style="font-size:12px">
+                                *이벤트 발동/ 맞히는 횟수 설정 가능<br />
+                                출현 ㅣ 17회 이상 초과할 수 없음<br />
+                                성공 ㅣ 출현 횟수를 초과할 수 없음
+                            </span>
+                        </dd>
                     </dl>
                     <dl>
                         <dt>2</dt>
