--- a/m/sub/eventship/event1.html
+++ b/m/sub/eventship/event1.html
@@ -190,7 +190,7 @@
                     </dl>
                 </div>
                 <div class="event_list_table_wrap">
-                    <h3>광고게재 영역</h3>
+                    <!-- <h3>광고게재 영역</h3>
                     <div>
                         <h4>스크린 광고(게임 전)</h4>
                         <ul>
@@ -238,7 +238,7 @@
                             <li><b>이벤트 페이지</b></li>
                             <li><b>전면 배너 협의</b></li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
