--- a/m/sub/marketingsolution/marketing10.html
+++ b/m/sub/marketingsolution/marketing10.html
@@ -37,17 +37,17 @@
                 <dl style="margin-top:0">
                     <dt>· 캠페인 배경</dt>
                     <dd style="margin-top:-8px">
-                        LIFEPLUS는 풍요로운 삶을 위해 필요한 <br>
-                        네 가지 핵심요소(Financial, Physical, Mental, Inspirational)를 <br>
-                        ‘Holistic Wellness’의 개념으로 새롭게 조명하고 골프존의 라이프스타일 콘텐츠와 <br>
+                        LIFEPLUS는 풍요로운 삶을 위해 필요한  
+                        네 가지 핵심요소(Financial, Physical, Mental, Inspirational)를  
+                        ‘Holistic Wellness’의 개념으로 새롭게 조명하고 골프존의 라이프스타일 콘텐츠와  
                         함께 앞선 삶의 질을 누리기 위한 서비스를 제공하였습니다.
                     </dd>
                 </dl>
                 <dl>
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
-                        LIFEPLUS TRIBES 앱 다운로드 유도를 위해 전면 팝업과 홈 메인 광고를 <br>
-                        약 2개월간 진행하였으며 골프드랍과 필드트립, 2개 다른 골프 관련 소재를 <br>
+                        LIFEPLUS TRIBES 앱 다운로드 유도를 위해 전면 팝업과 홈 메인 광고를  
+                        약 2개월간 진행하였으며 골프드랍과 필드트립, 2개 다른 골프 관련 소재를  
                         롤링하며 몰입도를 높이며 앱 다운로드 수를 증가시켰습니다.
                     </dd>
                 </dl>
