--- a/m/sub/marketingsolution/marketing11.html
+++ b/m/sub/marketingsolution/marketing11.html
@@ -39,15 +39,15 @@
                 <dl style="margin-top:0">
                     <dt>· 캠페인 배경</dt>
                     <dd style="margin-top:-8px">
-                        대한민국 최고의 스포츠 브랜드, 던롭스포츠는 주요 타겟층인 <br>
-                        골프존의 인프라를 활용하여 골프를 사랑하는 모든 이들에게 <br>
+                        대한민국 최고의 스포츠 브랜드, 던롭스포츠는 주요 타겟층인  
+                        골프존의 인프라를 활용하여 골프를 사랑하는 모든 이들에게  
                         더 편안하고, 더 다채롭고, 더 즐거운 라이프스타일을 제공할 수 있도록 브랜딩했습니다.
                     </dd>
                 </dl>
                 <dl>
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
-                        던롭스포츠는 스크린 로그인 시 독점으로 노출되는 광고 지면을 <br>
+                        던롭스포츠는 스크린 로그인 시 독점으로 노출되는 광고 지면을  
                         2023년 연간 계약함으로서 높은 주목도를 얻으며 브랜드 가치를 극대화 시켰습니다.
                     </dd>
                 </dl>
