--- a/m/sub/marketingsolution/marketing12.html
+++ b/m/sub/marketingsolution/marketing12.html
@@ -37,16 +37,16 @@
                 <dl style="margin-top:0">
                     <dt>· 캠페인 배경</dt>
                     <dd style="margin-top:-8px">
-                        복잡한 조건 없이 저렴한 가격을 자랑하는 롱기스트의 <br>
-                        홀인원 멤버십 가입 유도를 위해 MAU 154만명을 보유한 <br>
+                        복잡한 조건 없이 저렴한 가격을 자랑하는 롱기스트의  
+                        홀인원 멤버십 가입 유도를 위해 MAU 154만명을 보유한  
                         골프존 앱의 인기 지면을 활용한 홍보를 시도하였습니다.
                     </dd>
                 </dl>
                 <dl>
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
-                        골프존 앱의 인기 구좌인 전면 팝업을 장기 계약함으로서 <br>
-                        지속적인 롱기스트 광고 노출로 웹사이트 방문을 유도하여 <br>
+                        골프존 앱의 인기 구좌인 전면 팝업을 장기 계약함으로서  
+                        지속적인 롱기스트 광고 노출로 웹사이트 방문을 유도하여  
                         유료 멤버십 가입수를 증가시켰습니다.
                     </dd>
                 </dl>
