--- a/m/sub/marketingsolution/marketing2.html
+++ b/m/sub/marketingsolution/marketing2.html
@@ -36,15 +36,15 @@
                 <dl style="margin-top:0">
                     <dt>· 캠페인 배경</dt>
                     <dd style="margin-top:-8px">
-                        국내 최대 스크린 골프, 골프존 매장 인프라를 활용,<br>
+                        국내 최대 스크린 골프, 골프존 매장 인프라를 활용, 
                         S/S F/W 시즌별 신제품 홍보를 시도하였습니다.
                     </dd>
                 </dl>
                 <dl>
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
-                        크리스패션,와이드앵글,한성에프아이,유타골프웨어,펠타골프웨어,젝시믹스 등 <br>
-                        골프존 매체를 가장 활발히 활용, 기존 광고주들의 구좌 확대를 비롯 <br>
+                        크리스패션,와이드앵글,한성에프아이,유타골프웨어,펠타골프웨어,젝시믹스 등  
+                        골프존 매체를 가장 활발히 활용, 기존 광고주들의 구좌 확대를 비롯  
                         지속적인 신규 광고주들의 인입으로 다양한 홍보 효과와 마케팅 효과를 보고 있습니다. 
                     </dd>
                 </dl>
