--- a/m/sub/marketingsolution/marketing3.html
+++ b/m/sub/marketingsolution/marketing3.html
@@ -24,7 +24,7 @@
         <div style="clear:both;background:#f3f7fa;padding:4rem 1.5rem;width:calc(100% - 3rem)">
             <h1>석교상사</h1>
             <h2>
-                브리지스톤골프<br>
+                브리지스톤골프를 앞세운 <br>토털 골프 브랜드로서의 도약<br>
                 골프존 메인 광고 상품을 활용하여<br>
                 골프 토털 브랜드로서의 포지셔닝
             </h2>
@@ -36,17 +36,17 @@
                 <dl style="margin-top:0">
                     <dt>· 캠페인 배경</dt>
                     <dd style="margin-top:-8px">
-                        다양한 브랜드 경쟁이 치열한 골프용품 시장에서<br>
+                        다양한 브랜드 경쟁이 치열한 골프용품 시장에서 
                         골프 토털 브랜드로서의 전략적 포지셔닝 강화를 시도하였습니다.
                     </dd>
                 </dl>
                 <dl>
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
-                        최적의 타겟을 확보한 골프존의 다양한 매체 스크린광고, GDR, 스크린골프존 광고를 집행, <br>
-                        제품 홍보 및 체험 기회 제공하며 브랜드 커뮤니케이션에 집중하였습니다.<br>
-                        볼과 클럽 소재로 골프존 스크린광고, 홀이동광고 및 가상광고 연간 집행과 동시에 <br>
-                        시타클럽 제공, GDR 로딩 및 대기화면 광고 노출과 스크린골프존 TVC 광고까지, <br>
+                        최적의 타겟을 확보한 골프존의 다양한 매체 스크린광고, GDR, 스크린골프존 광고를 집행,  
+                        제품 홍보 및 체험 기회 제공하며 브랜드 커뮤니케이션에 집중하였습니다. 
+                        볼과 클럽 소재로 골프존 스크린광고, 홀이동광고 및 가상광고 연간 집행과 동시에  
+                        시타클럽 제공, GDR 로딩 및 대기화면 광고 노출과 스크린골프존 TVC 광고까지,  
                         다양한 골프존 광고 패키지를 활용해 토털 골프 브랜드로서 포지셔닝 중 입니다.
                     </dd>
                 </dl>
