--- a/m/sub/marketingsolution/marketing4.html
+++ b/m/sub/marketingsolution/marketing4.html
@@ -41,7 +41,7 @@
                 <dl>
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
-                        3050의 가장 큰 관심사인 건강 키워드를 스크린 라운딩 중에 노출 시켜, <br>
+                        3050의 가장 큰 관심사인 건강 키워드를 스크린 라운딩 중에 노출 시켜,  
                         정확한 타켓의 홍보로 집중력을 극대화해 유저들에게 노출하고 있습니다.
                     </dd>
                 </dl>
