--- a/m/sub/marketingsolution/marketing5.html
+++ b/m/sub/marketingsolution/marketing5.html
@@ -25,7 +25,7 @@
             <h1>하이트진로</h1>
             <h2>
                 대한민국 대표 소주 참이슬<br>
-                대결의 즐거움 배틀존 서비스를 활용한 커뮤니케이션 전략
+                대결의 즐거움 배틀존 서비스를 <br>활용한 커뮤니케이션 전략
             </h2>
             <p class="pop_text">#배틀존&nbsp;&nbsp;#브랜드커뮤니케이션&nbsp;&nbsp;#오브젝트이벤트&nbsp;&nbsp;#매장홍보포스터</p>
             <div class="pop_info_img" style="text-align: center;">
@@ -35,17 +35,17 @@
                 <dl style="margin-top:0">
                     <dt>· 캠페인 배경</dt>
                     <dd style="margin-top:-8px">
-                        하이트진로의 참이슬은 명실상부한 우리나라 NO1. 소주임에 의심할 여지가 없습니다.<br>
-                        참이슬은 깨끗함과 즐거움으로 중장년층에게는 추억을,<br>
+                        하이트진로의 참이슬은 명실상부한 우리나라 NO1. 소주임에 의심할 여지가 없습니다. 
+                        참이슬은 깨끗함과 즐거움으로 중장년층에게는 추억을, 
                         청년층에게는 재미를 제공하는 브랜드 커뮤니케이션을 지향하였습니다
                     </dd>
                 </dl>
                 <dl>
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
-                        참이슬이 지향하는 건전한 즐거움을 대결의 즐거움에 기반한 <br>
-                        골프존 신규서비스 배틀존을 통하여 임팩트 있게 공략 <br>
-                        핵심 타겟은 즐거움 공감하였고 이는 높은 반응을 이끌어 낼 수 있었습니다. <br>
+                        참이슬이 지향하는 건전한 즐거움을 대결의 즐거움에 기반한  
+                        골프존 신규서비스 배틀존을 통하여 임팩트 있게 공략  
+                        핵심 타겟은 즐거움 공감하였고 이는 높은 반응을 이끌어 낼 수 있었습니다.  
                         하이트진로는 2017년부터 2023년 현재까지 매년 배틀존 서비스를 함께하고 있습니다.
                     </dd>
                 </dl>
