--- a/m/sub/marketingsolution/marketing6.html
+++ b/m/sub/marketingsolution/marketing6.html
@@ -25,11 +25,12 @@
             <h1>신한투자증권</h1>
             <h2>
                 골프존 프리미엄 회원 타겟<br>
-                좋은 세상을 만들기 위해 옳은 일을 하고자 하는 신한투자증권만의 수수료 평생 혜택이라는 강력한 홍보
+                좋은 세상을 만들기 위해 옳은 일을 하고자 하는 <br>
+                신한투자증권만의 수수료 평생 혜택이라는 강력한 홍보
             </h2>
             <p class="pop_text">#기업 PR&nbsp;&nbsp;
             #기업네이밍 코스 제작&nbsp;&nbsp;
-            #기업 코스 내 이벤트 진행&nbsp;&nbsp;
+            #기업 코스 내 이벤트 진행&nbsp;&nbsp; <br>
             #글로벌 대회 진행&nbsp;&nbsp;
             #GTOUR MEN'S&nbsp;&nbsp;
             #이벤트&퍼포먼스</p>
@@ -40,16 +41,16 @@
                 <dl style="margin-top:0">
                     <dt>· 캠페인 배경</dt>
                     <dd style="margin-top:-8px">
-                        다양하고 특별한 혜택으로 가득한 신한투자증권, <br>
+                        다양하고 특별한 혜택으로 가득한 신한투자증권,  
                         특별한 혜택을 받을 수 있도록 MZ고객 대상 콘텐츠 구성 및 이벤트를 진행하였습니다.
                     </dd>
                 </dl>
                 <dl>
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
-                        신한투자증권만을 위한 코스 설계<br>
-                        이벤트 내 다양한 경품 증정<br>
-                        No.1 골프정보 사이트 골프존닷컴을 통한 홍보와 동시에 골프존 회원 대상 스페셜 친구를 통해 <br>
+                        신한투자증권만을 위한 코스 설계 
+                        이벤트 내 다양한 경품 증정 
+                        No.1 골프정보 사이트 골프존닷컴을 통한 홍보와 동시에 골프존 회원 대상 스페셜 친구를 통해  
                         홍보 및 타겟의 긍정적인 반응을 이끌어 낼 수 있었습니다.
                     </dd>
                 </dl>
