--- a/m/sub/marketingsolution/marketing7.html
+++ b/m/sub/marketingsolution/marketing7.html
@@ -25,7 +25,7 @@
             <h1>렉서스</h1>
             <h2>
                 렉서스만의 특별한 감동<br>
-                골프존 장타대회를 활용한 브랜딩 전략도
+                골프존 장타대회를 활용한 브랜딩 전략 제시
             </h2>
             <p class="pop_text">
                 #장타이벤트&nbsp;&nbsp;
@@ -38,15 +38,15 @@
                 <dl style="margin-top:0">
                     <dt>· 캠페인 배경</dt>
                     <dd style="margin-top:-8px">
-                        매년 렉서스는 고객들의 감성을 자극하고 기대를 뛰어 넘는 놀라운 경험 장타대회를 통해<br>
+                        매년 렉서스는 고객들의 감성을 자극하고 기대를 뛰어 넘는 놀라운 경험 장타대회를 통해 
                         고객들의 기대를 뛰어넘을 수 있는 재미를 제공하는 이벤트로 브랜드 홍보를 시도하였습니다.
                     </dd>
                 </dl>
                 <dl>
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
-                        장타 이벤트를 온라인과 오프라인에서 즐길 수 있도록 <br>
-                        골프존 회원을 타겟으로 장타대회 참여자를 선정하여 <br>
+                        장타 이벤트를 온라인과 오프라인에서 즐길 수 있도록  
+                        골프존 회원을 타겟으로 장타대회 참여자를 선정하여  
                         필드 대회 참여를 제공하며 브랜드 커뮤니케이션에 집중하였습니다.
                         <p style="margin-top:30px">
                             <b>
