--- a/sub/eventship/event.html
+++ b/sub/eventship/event.html
@@ -148,8 +148,14 @@
                             <dl>
                                 <dt>1</dt>
                                 <dd>티샷 시 페어웨이에 등장하는<br />
-                                    브랜딩 된 풍선(오브젝트) 6회 출현,<br />
-                                    3번 맞히면 미션 성공 <br /><span style="font-size:15px">*이벤트 발동/ 맞히는 횟수 설정 가능</span></dd>
+                                    브랜딩 된 풍선(오브젝트) N회 출현,<br />
+                                    N번 맞히면 미션 성공 <br />
+                                    <span style="font-size:15px">
+                                        *이벤트 발동/ 맞히는 횟수 설정 가능<br />
+                                        출현 ㅣ 17회 이상 초과할 수 없음<br />
+                                        성공 ㅣ 출현 횟수를 초과할 수 없음
+                                    </span>
+                                </dd>
                             </dl>
                             <dl>
                                 <dt>2</dt>
@@ -164,7 +170,7 @@
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>판매단가<br /><span>5,000만원 (1개CC, 1개월)<br />
+                                <dd>판매단가<br /><span>3,000만원 (1개CC, 1개월)<br />
                                     <span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></span></dd>
                             </dl>
                             <dl>
@@ -197,7 +203,7 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>미션 달성시 골프존앱 선물 상자를 <br>통하여 선물 지급</dd>
+                                <dd>미션 달성시 골프존앱 <br>선물 상자를 통하여 <br>선물 지급</dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
@@ -218,7 +224,7 @@
                                     경품은 광고주 제공</span></dd>
                             </dl>
                         </div>
-                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -276,7 +282,7 @@
                                     <td colspan="3"><span>전면 배너 협의</span></td>
                                 </tr>
                             </table>
-                        </div>
+                        </div> -->
                     </div>
                 </div><!--// tab2 -->
                 <div id="tab3" class="tab_content">
@@ -297,8 +303,7 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급
-                                </dd>
+                                <dd>미션 달성시 골프존앱 <br>선물 상자를 통하여 <br>선물 지급</dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
@@ -398,8 +403,7 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급
-                                </dd>
+                                <dd>미션 달성시 골프존앱 <br>선물 상자를 통하여 <br>선물 지급</dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
@@ -497,8 +501,7 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급
-                                </dd>
+                                <dd>미션 달성시 골프존앱 <br>선물 상자를 통하여 <br>선물 지급</dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
