--- a/m/sub/marketingsolution/marketing1.html
+++ b/m/sub/marketingsolution/marketing1.html
@@ -24,7 +24,7 @@
         <div style="clear:both;background:#f3f7fa;padding:4rem 1.5rem;width:calc(100% - 3rem)">
             <h1>골든블루</h1>
             <h2>위스키 기업 최초 골프단 창단<br>
-            골프와 기부를 접목한 사회공헌활동을 위한 골프 대중화의 저변 확대</h2>
+            골프와 기부를 접목한 사회공헌활동을 <br>위한 골프 대중화의 저변 확대</h2>
             <p class="pop_text">#스크린광고&nbsp;&nbsp;#홀이동광고&nbsp;&nbsp;#GTOUR 인비테이셔널</p>
             <div class="pop_info_img" style="text-align: center;">
                 <img src="../../images/sub/img_marketing_pop_1.jpg" alt="" style="max-width:720px;border:15px solid white" />
@@ -32,16 +32,21 @@
             <div class="pop_text_list">
                 <dl style="margin-top:0">
                     <dt>· 캠페인 배경</dt>
-                    <dd style="margin-top:-8px">㈜골든블루는 2016년 국내 위스키 기업 최초로 골프단 창단, <br>
+                    <dd style="margin-top:-8px">㈜골든블루는 2016년 국내 위스키 기업 최초로 골프단 창단,  
                         8년째 골프 육성에 기여를 하고 있습니다
                     </dd>
                 </dl>
                 <dl>
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
-                        K-주류문화를 선도하는 종합주류회사로서, <br>
-                        국내 골프의 발전을 위해 스포츠 공헌 활동을 지속적으로 이어 나갈 예정이며, <br>
+                        K-주류문화를 선도하는 종합주류회사로서, 
+                        국내 골프의 발전을 위해 스포츠 공헌 활동을 지속적으로 이어 나갈 예정이며, 
                         다양한 마케팅으로 골프의 대중화를 이끄는 기업으로 최적의 마케팅 효과를 내고 있습니다.
+                        <br><br>
+                        
+                        '골든블루 GTOUR 인비테이셔널' 대회의 메인스폰서 참여하며 8년째 골프단을 운영 중 입니다. 
+                        골프존은 이러한 골든블루의 골프 대중화 저변 확대를 돕기 위해 다양한 인게임 광고 패키지와 
+                        이벤트를 기획했습니다.
                     </dd>
                 </dl>
                 <dl>
