--- a/m/sub/marketingsolution/marketing8.html
+++ b/m/sub/marketingsolution/marketing8.html
@@ -37,20 +37,20 @@
                 <dl style="margin-top:0">
                     <dt>· 캠페인 배경</dt>
                     <dd style="margin-top:-8px">
-                        국내 최고의 렌터카 브랜드 롯데렌터카는 다양한 서비스를 <br>
-                        제공하여 보다 즐거운 Car Life를 만들어가고 있으며, <br>
+                        국내 최고의 렌터카 브랜드 롯데렌터카는 다양한 서비스를  
+                        제공하여 보다 즐거운 Car Life를 만들어가고 있으며,  
                         더 나아가 골프존과의 제휴를 통해 폭넓은 홍보를 시도하였습니다.
                     </dd>
                 </dl>
                 <dl>
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
-                        고객의 새로운 라이프스타일을 위하여, 여가와 즐거움을 포커스로 한 <br>
-                        골프존과의 제휴를 통해 고객 및 VIP 대상으로 많은 혜택을 제공하였습니다.<br>
-                        대한민국 최대규모 여성 프로 스크린골프대회 GTOUR WOMEN'S 타이틀 스폰서로서 <br>
-                        9년 째 활동 중이며 골프존의 IPTV 및 유튜브 등 다양한 미디어 콘텐츠 상품을 활용해 <br>
-                        전략적 홍보를 진행 중 입니다. <br>
-                        또한 대전 조이마루 대관을 통해 롯데렌터카 VIP대상 초청 스크린골프 대회도 <br>진행하고 있습니다.
+                        고객의 새로운 라이프스타일을 위하여, 여가와 즐거움을 포커스로 한  
+                        골프존과의 제휴를 통해 고객 및 VIP 대상으로 많은 혜택을 제공하였습니다. 
+                        대한민국 최대규모 여성 프로 스크린골프대회 GTOUR WOMEN'S 타이틀 스폰서로서  
+                        9년 째 활동 중이며 골프존의 IPTV 및 유튜브 등 다양한 미디어 콘텐츠 상품을 활용해  
+                        전략적 홍보를 진행 중 입니다.  
+                        또한 대전 조이마루 대관을 통해 롯데렌터카 VIP대상 초청 스크린골프 대회도  진행하고 있습니다.
                     </dd>
                 </dl>
                 <dl>
