--- a/m/sub/marketingsolution/marketing9.html
+++ b/m/sub/marketingsolution/marketing9.html
@@ -25,7 +25,7 @@
             <h1>KB증권</h1>
             <h2>
                 KB증권<br>
-                부(富)메랑 리워드 & 해외 ETF 거래 이벤트<br>
+                부(<span class="font-exception">富</span>)메랑 리워드 & 해외 ETF 거래 이벤트<br>
                 캠페인 참여 독려 성료
             </h2>
             <p class="pop_text">
@@ -38,16 +38,16 @@
                 <dl style="margin-top:0">
                     <dt>· 캠페인 배경</dt>
                     <dd style="margin-top:-8px">
-                        2023년 계묘년 새해를 맞이해 온라인 개인고객들에게 <br>
-                        더욱 풍성한 혜택 제공을 위해 현금 지급 리워드 이벤트를 <br>
+                        2023년 계묘년 새해를 맞이해 온라인 개인고객들에게  
+                        더욱 풍성한 혜택 제공을 위해 현금 지급 리워드 이벤트를  
                         골프존과 함께 진행했습니다.
                     </dd>
                 </dl>
                 <dl>
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
-                        소비력 있는 30-50대의 고객층을 보유한 골프존과의 제휴를 통해 <br>
-                        약 14일간 KB증권 홈페이지 랜딩 및 이벤트 참여를 유도하여 <br>
+                        소비력 있는 30-50대의 고객층을 보유한 골프존과의 제휴를 통해  
+                        약 14일간 KB증권 홈페이지 랜딩 및 이벤트 참여를 유도하여  
                         거래 이벤트 참가자 수를 증가시켰습니다.
                     </dd>
                 </dl>
