--- a/sub/marketingsolution/marketing.html
+++ b/sub/marketingsolution/marketing.html
@@ -405,7 +405,7 @@
                             <div style="clear:both;">
                                 <h1>골든블루</h1>
                                 <h2>위스키 기업 최초 골프단 창단<br>
-                                골프와 기부를 접목한 사회공헌활동을 위한 골프 대중화의 저변 확대</h2>
+                                골프와 기부를 접목한 사회공헌활동을 <br>위한 골프 대중화의 저변 확대</h2>
                                 <p class="pop_text">#스크린광고&nbsp;&nbsp;#홀이동광고&nbsp;&nbsp;#GTOUR 인비테이셔널</p>
                                 <div class="pop_info_img" style="text-align: center;">
                                     <img src="../../images/sub/img_marketing_pop_1.jpg" alt="" style="max-width:720px;border:15px solid white" />
@@ -423,6 +423,11 @@
                                             K-주류문화를 선도하는 종합주류회사로서, <br>
                                             국내 골프의 발전을 위해 스포츠 공헌 활동을 지속적으로 이어 나갈 예정이며, <br>
                                             다양한 마케팅으로 골프의 대중화를 이끄는 기업으로 최적의 마케팅 효과를 내고 있습니다.
+                                            <br><br>
+                                            
+                                            '골든블루 GTOUR 인비테이셔널' 대회의 메인스폰서 참여하며 8년째 골프단을 운영 중 입니다. <br>
+                                            골프존은 이러한 골든블루의 골프 대중화 저변 확대를 돕기 위해 다양한 인게임 광고 패키지와 <br>
+                                            이벤트를 기획했습니다.
                                         </dd>
                                     </dl>
                                     <dl>
@@ -568,7 +573,8 @@
                             <div style="clear:both;">
                                 <h1>석교상사</h1>
                                 <h2>
-                                    브리지스톤골프<br>
+                                    브리지스톤골프를 앞세운 <br>
+                                    토털 골프 브랜드로서의 도약<br>
                                     골프존 메인 광고 상품을 활용하여<br>
                                     골프 토털 브랜드로서의 포지셔닝
                                 </h2>
@@ -800,7 +806,8 @@
                                 <h1>신한투자증권</h1>
                                 <h2>
                                     골프존 프리미엄 회원 타겟<br>
-                                    좋은 세상을 만들기 위해 옳은 일을 하고자 하는 신한투자증권만의 수수료 평생 혜택이라는 강력한 홍보
+                                    좋은 세상을 만들기 위해 옳은 일을 하고자 하는 <br>
+                                    신한투자증권만의 수수료 평생 혜택이라는 강력한 홍보
                                 </h2>
                                 <p class="pop_text">#기업 PR&nbsp;&nbsp;
                                 #기업네이밍 코스 제작&nbsp;&nbsp;
@@ -873,7 +880,7 @@
                                 <h1>렉서스</h1>
                                 <h2>
                                     렉서스만의 특별한 감동<br>
-                                    골프존 장타대회를 활용한 브랜딩 전략도
+                                    골프존 장타대회를 활용한 브랜딩 전략 제시
                                 </h2>
                                 <p class="pop_text">
                                     #장타이벤트&nbsp;&nbsp;
